syntax = "proto3";

package axion.graph;

import "common/common.proto";

// Project messages
message CreateProjectRequest {
  axion.common.RequestMetadata metadata = 1;
  string name = 2;
  map<string, string> infrastructure_config = 3; // JSONB конфигурация
}

message GetProjectRequest {
  axion.common.RequestMetadata metadata = 1;
  string project_id = 2;
}

message UpdateProjectRequest {
  axion.common.RequestMetadata metadata = 1;
  string project_id = 2;
  optional string name = 3;
  map<string, string> infrastructure_config = 4; // Map fields are always optional in proto3
}

message DeleteProjectRequest {
  axion.common.RequestMetadata metadata = 1;
  string project_id = 2;
}

message ListProjectsRequest {
  axion.common.RequestMetadata metadata = 1;
  axion.common.Pagination pagination = 2;
}

message Project {
  string id = 1;
  string user_id = 2;
  string name = 3;
  int32 graph_version = 4;
  map<string, string> infrastructure_config = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message ProjectResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    Project project = 3;
  }
}

message ListProjectsResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    ListProjectsData data = 3;
  }
}

message ListProjectsData {
  repeated Project projects = 1;
  axion.common.Pagination pagination = 2;
}
